добавлены демонстрации к первой лекции

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    
+
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
+    <script src="{{ "/js/oscillations.js" | prepend: site.baseurl }}"></script>
 </head>
