--- a/css/main.css
+++ b/css/main.css
@@ -266,6 +266,8 @@ a:visited { color: #205caa; }
 
 .post pre.terminal code { background-color: #333; }
 
+figure {text-align: center}
+
 /* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
 
