--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,9 @@ a:visited { color: #205caa; }
 
 .post pre.terminal code { background-color: #333; }
 
-figure {text-align: center}
+figure { text-align: center; padding: 30px;}
+figcaption { font-style: italic; font-size: 80%; }
+img { max-width: 100%; }
 
 /* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
