--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,11 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrap">
-      {{ content }}
+    <div class="content">
+      <div class="row">
+        <div class="col m12 l8 offset-l2">
+          {{ content }}
+        </div>
       </div>
     </div>
 
